@@ -1,3 +1,13 @@
+Sun Apr  5 08:03:01 1998  Tim Janik  <timj@gtk.org>
+
+	* gtk/gtkspinbutton.c: fixed panel allocation and stacking order,
+	fixed the base class realization.
+
+	* gtk/gtkmisc.c: implemented widget arguments. 
+
+	* gtk/gtkentry.c: fixes in _realize to behave similar to
+ 	_size_allocate.
+
 Sat Apr  4 12:23:23 BST 1998  Tony Gale  <gale@gtk.org>
 
 	* docs/gtk_tut.sgml: (gtk-crichton-980403-0) subsections on
